--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "version": "0.0.1",
   "scripts": {
     "start": "node scripts/start.mjs",
-    "build": "tsc --noEmit -p src/frontend/tsconfig.json && node scripts/build.mjs"
+    "build": "tsc --noEmit -p src/frontend/tsconfig.json && node scripts/build.mjs",
+    "export": "node scripts/export.js"
   },
   "engines": {
     "node": ">=12"
@@ -33,6 +34,8 @@
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
     "axios": "^0.27.2",
+    "fs-extra": "^10.1.0",
+    "minimist": "^1.2.6",
     "react": "^18.0.0",
     "react-countdown-hook": "^1.1.1",
     "react-dom": "^18.0.0",
